# T-Groundair

./: README.md  differneces
Requirements/: README.md
Requirements/SySR_GASPORTS/: SyRS_GASPORTS.notation
SRV/: CMakeLists.txt  README.md  package.xml
SRV/devel/: .catkin  local_setup.sh
SRV/launch/: environment_gazebo.launch
SRV/src/: central_station.cc  drone.cc
Software/: readme.md
Software/BebopS/launch/: simulation.launch
Software/BebopS/worlds/: envV10.world  envV11.world  (+4 more)
Software/nre_p3at/: CMakeLists.txt  package.xml
Software/ros_gazebo_v1/: CMakeLists.txt  README.md  README.txt
Software/ugv_controller/: package.xml  readme.md
SysML_model/: README.md
SysML_model/ISE_DC_2019_SysML/: ISE_DC_2019_MODEL.notation  ISE_DC_2019_MODEL.uml  ISE_DC_2019_MODEL_es_ES.properties  SyRS_GASPORTS.notation  SyRS_GASPORTS.uml
SysML_model/proposed_model_changes/: ISE_DC_2019_MODEL.notation
UGV_Structure_Model/: UGV_Structure_Model.notation  UGV_Structure_Model.uml
UGVdevel/: readme.md
UGVdevel/ugv_controller/: CMakeLists.txt  package.xml
doc/: README.md
models/: README.md
models/ISE_DC_2019_MODEL/: ISE_DC_2019_MODEL.uml
models/proposed_model_changes/: ISE_DC_2019_MODEL.notation  ISE_DC_2019_MODEL.uml  ISE_DC_2019_MODEL_es_ES.properties
models/ros_gazebo_v1/: CMakeLists.txt  README.txt
models/ros_gazebo_v1/launch/: environment_gazebo.launch
models/ros_gazebo_v1/src/: central_station.cc  drone.cc  interface.cpp
models/ros_gazebo_v1/worlds/: environment_gazebo.world  hello.world
models/t_ground_air_env/: CMakeLists.txt  package.xml
requirements/: README.md
requirements/SySR_GASPORTS/: SyRS_GASPORTS.notation  SyRS_GASPORTS.uml
software/: README.md  ingenia_rostest.ttt
software/GAZEBO/: doc.txt  readme.md
software/controlQuadripcopterVrep/: README.md
web/: README.md
(+116 files in other folders)
